vlib/v/parser/tests/invalid_attribute_d.out
vlib/v/parser/tests/invalid_attribute_d.vv:1:9: error: unexpected token `}`, an argument is expected after `:`
    1 | [foobar:}
      |         ^
    2 | fn my_fn_with_invalid_attr() {
    3 | }
